--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover' id='viewport'>
   <title>Open Science</title>
 
-  <!-- //-| Gland.css |--------------------------------------| -->
+  <!-- //-| Loris Gland.css |--------------------------------| -->
   <link rel='stylesheet' type='text/css' href='dist/app.css'>
   <!-- //----------------------------------------------------| -->
 
@@ -19,6 +19,7 @@
 
 <body>
   <div id='menu'>
+    <div id='title'>Open LORIS Platforms</div>
     <div id='visitors'>Visitors: </div>
   </div>
   <div id='map'></div>
